--- a/car-parking-app/src/styles.scss
+++ b/car-parking-app/src/styles.scss
@@ -1,1 +1,127 @@
 /* You can add global styles to this file, and also import other style files */
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
+* {
+   box-sizing: border-box;
+   font-family: 'Open Sans', sans-serif;
+ }
+ body{
+   padding: 0px;
+   margin: 0px;
+   font-family: 'Open Sans', sans-serif;
+   background-color: #f1f1f1;
+ }
+
+.flex-container {
+   display: flex;
+   align-items: stretch;
+ }
+ 
+ .flex-container > div {
+   color: #373737;
+   text-align: left;
+   line-height: 50px;
+   font-size: 20px;
+   font-family: 'Open Sans', sans-serif;
+   &.green{
+      background : #2f246a;
+      text-align: center;
+      color: #fff;
+      width: 100%;
+   }
+
+ }
+
+.row {  
+   display: flex;
+   flex-wrap: wrap;
+   background-color: #f1f1f1;
+ }
+ .top-col {
+   flex: 100%;
+   //background-color: #ffffff;
+   padding: 30px;
+}
+.flex-items {
+   display: flex;
+  flex-wrap: wrap;
+  font-size: 20px;
+  text-align: center;
+  .flex-item-left {
+      background-color: #ffffff;
+      padding: 10px 15px;
+      margin:0 10px 10px 0;
+      cursor: pointer; 
+      &:hover{
+         box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+       }    
+   }
+ }
+ .table{
+    width: 100%;
+    th{
+       text-align: center;
+       background: #d9d9d5;
+       padding:10px 0;
+       font-size: 13px;
+    }
+    td{
+       text-align: center;
+       padding:10px 0;
+       font-size: 12px;
+       i{
+         font-size: 18px;
+         cursor: pointer;
+       }
+    }
+    tr:nth-child(even) {background: #f0f7f7 }
+    tr:nth-child(odd) {background: #ffffff}
+ }
+ .btnBlueGreen {
+   background: #00AE68;
+   color: #fff;
+   cursor: pointer;
+   text-transform: uppercase;
+   float: right;
+   
+   &.addico{
+     width: 180px;
+     height: 30px;
+      line-height: 17px;
+      outline: none;
+      border: none;
+      border-radius: 2px;
+      &:hover{
+        background:#059c60;
+      }
+      i{
+         font-size: 14px;
+         width: 14px;
+         height: 14px;
+         position: relative;
+         top: 1px;
+      }
+   }
+  
+ }
+ .selected{
+    background-color:#2f246a!important;
+    color: #fff;
+    box-shadow: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
+    
+ }
+ .mat-form-field {
+   display: inline-block;
+   position: relative;
+   text-align: left;
+   width: 400px;
+   font-size: 14px;
+}
+.flr{
+   float: right;
+}
+.mLft{
+   margin-right: 30px;
+}
+.show{
+   display: none;
+}
