--- a/car-parking-app/src/app/components/add-parking-slot/add-parking-slot.component.html
+++ b/car-parking-app/src/app/components/add-parking-slot/add-parking-slot.component.html
@@ -53,6 +53,6 @@
 </div>
 
 <div mat-dialog-actions class="flr">
-  <button mat-button (click)="onNoClick()">No Thanks</button>
-  <button mat-button (click)="saveRole()" cdkFocusInitial>Ok</button>
+  <button mat-button color="accent" (click)="onNoClick()">No Thanks</button>
+  <button mat-button color="primary" (click)="saveRole()" cdkFocusInitial>Ok</button>
 </div>
